# MobileTargetTracking

./: .gitignore  CMakeLists.txt  CompareFrames.cpp  MIL.avi  README.md  RaspicamTest.cpp  UART_Raspi.docx  Workinconfig.txt  build-steps.md  coords.txt  set-up.md  tracker.sh
src/: Camera.cpp  Communication.cpp  GradiantScreen.cpp  HelloWorld.cpp  ImageDemo.cpp  Logger.cpp  MAVLinkTest.cpp  MAVLinkUtils.cpp  Main.cpp  Tracking.cpp  UART.cpp  VideoTransmitter.cpp  test_avi.avi  tracking-demo.cpp  webcam-demo.cpp
src/DebugScripts/: CameraFrameBuffer.cpp  DebugVideo.cpp  DistanceTest.cpp  Lat_Long_Management_Test.cpp  MAVLinkDemo.cpp  MAVLinkTest.cpp  PaintScreen.cpp  SetFlightMode.cpp  tracking-demo.cpp  webcam-demo.cpp
src/include/: Camera.h  Communication.h  Logger.h  MAVLinkUtils.h  Tracking.h  UART.h  VideoTransmitter.h
tests/: SimpleMath.cpp  SimpleMathTests.cpp  TestCamera.cpp  TestTracking.cpp  TestUART.cpp  TestVideoTransmitter.cpp
